--- a/chat-chat/package.json
+++ b/chat-chat/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~9.1.11",
     "angularfire2": "^5.4.2",
     "firebase": "^7.15.3",
-    "rxjs": "~6.5.4",
+    "grpc": "^1.24.3",
+    "rxjs": "6.5.3",
+    "rxjs-compat": "6.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
